salesforce-connection/salesforce/Objects/Wallet__c/fields/TimeUnix__c.field-meta.xml
<CustomField>
    <fullName>TimeUnix__c</fullName>
    <formula>(Time__c - DATETIMEVALUE( &quot;1970-01-01 00:00:00&quot; )) * 86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Unix Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>